# realtime-intrusion-detection

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  PLAN.md  README.md  SETUP.md  requirements.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  vcpkg.json
cpp/apps/: alert_gateway.cpp  bench_inference.cpp  feature_consumer.cpp  flow_extractor.cpp  inference_server.cpp
cpp/proto/: alerts.proto
cpp/src/: alert_broadcaster.h  alert_gateway.cpp  bench_inference.cpp  feature_consumer.cpp  feature_schema.h  flow.h  flow_aggregator.cpp  flow_aggregator.h  flow_history.h  flow_json.h  inference_server.cpp  kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h  logging.h  main.cpp  metrics.h  onnx_model.cpp  onnx_model.h  packet.h  pcap_reader.cpp  pcap_reader.h  redis_dedup.cpp  redis_dedup.h
cpp/src/alert/: broadcaster.hpp
cpp/src/dedup/: redis_dedup.cpp  redis_dedup.hpp
cpp/src/flow/: aggregator.cpp  aggregator.hpp  feature_schema.hpp  flow.hpp  history.hpp  json.hpp
cpp/src/messaging/: kafka_consumer.cpp  kafka_consumer.hpp  kafka_producer.cpp  kafka_producer.hpp
cpp/src/model/: onnx_model.cpp  onnx_model.hpp
cpp/src/net/: packet.hpp  pcap_reader.cpp  pcap_reader.hpp
cpp/src/observability/: logging.hpp  metrics.hpp
docs/: DECISIONS.md  PLAN.md  SETUP.md
infra/: create-topics.sh  docker-compose.yml  prometheus.yml
infra/grafana/provisioning/dashboards/: provider.yml
infra/grafana/provisioning/dashboards/json/: ids.json
infra/grafana/provisioning/datasources/: prometheus.yml
infra/helm/ids/: Chart.yaml  values.yaml
infra/helm/ids/templates/: configmap.yaml  feature-consumer.yaml  inference-server.yaml  kafka.yaml  redis.yaml  scaledobject.yaml
notebooks/: logistic_regression.ipynb  mlp.ipynb  preprocessing.ipynb  random_forest_classifier.ipynb  xgboost.ipynb
scripts/: alert_client.py  export_onnx.py
src/model_benchmarking/logistic_regression/: __init__.py  logistic_regression.py
src/model_benchmarking/mlp/: mlp.py
src/model_benchmarking/random_forest/: random_forest.py
src/model_benchmarking/xgboost/: xgboost.py
src/preprocessing/: preprocessing.py
